# weather-cat-client-rs

./: Cargo.toml  private_key.test.pem  temp_store.json
src/: main.rs
